# gst-plugins-gl

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  GNUmakefile  GNUmakefile.gnustep  INSTALL  Makefile.am  NEWS  README  RELEASE  REQUIREMENTS  TODO  autogen.sh  configure.ac  gst-plugins-gl.doap  gst-plugins-gl.spec.in  travis-autogen-wrapper.sh
cmake/modules/: FindATK.cmake  FindCairo.cmake  FindGTK2.cmake  FindGlew.cmake  FindGlib2.cmake  FindGstreamer.cmake  FindLibXml2.cmake  FindLibpng.cmake
docs/: DEBUGGING  Makefile.am  README.txt  libgstopengl.vsd  version.entities.in
docs/libs/: .gitignore  Makefile.am  gst-plugins-gl-libs-docs.sgml  gst-plugins-gl-libs-sections.txt  gst-plugins-gl-libs.types
docs/plugins/: Makefile.am  gst-plugins-gl-plugins-docs.sgml  gst-plugins-gl-plugins-sections.txt  gst-plugins-gl-plugins.args  gst-plugins-gl-plugins.hierarchy  gst-plugins-gl-plugins.prerequisites  gst-plugins-gl-plugins.types
docs/plugins/inspect/: plugin-libvisual-gl.xml  plugin-opengl.xml
ext/: CMakeLists.txt  Makefile.am
gst/: Makefile.am
gst-libs/: CMakeLists.txt  Makefile.am
gst-libs/gst/: CMakeLists.txt  Makefile.am  gettext.h  gst-i18n-plugin.h
gst-libs/gst/freeglut/: CMakeLists.txt  Makefile.am  freeglut_callbacks.c  freeglut_display.c  freeglut_ext.h  freeglut_init.c  freeglut_internal.h  freeglut_main.c  freeglut_state.c  freeglut_std.h  freeglut_structure.c  freeglut_window.c  gstfreeglut.h
gst-libs/gst/freeglut/GL/: freeglut_std.h
gst-libs/gst/freeglut/src/: Makefile.am  freeglut_display.c  freeglut_init.c  freeglut_internal.h  freeglut_main.c  freeglut_window.c
gst-libs/gst/gl/: Makefile.am  gltestsrc.c  gltestsrc.h  gstglbuffer.c  gstglbuffer.h  gstglbufferpool.c  gstglbufferpool.h  gstglcontext.c  gstgldisplay.c  gstgldisplay.h  gstglfilter.c  gstglfilter.h  gstglmemory.c  gstglmixer.c  gstglshader.c  gstglupload.c  gstglutils.c  gstglwindow.c  gstglwindow_x11.c
gst/gl/: BUGS  Makefile.am  gltestsrc.c  gstgl.c  gstglcolorscale.c  gstglcolorscale.h  gstgldeinterlace.c  gstgldeinterlace.h  gstgldownload.c  gstgldownload.h  gstgleffects.c  gstglfilter.c  gstglfilter.h  gstglfilterapp.c  gstglfilterapp.h  gstglfiltercube.c  gstglfiltercube.h  gstglfilteredge.c  gstglfilteredge.h  gstglfiltershader.c  gstglgraphicmaker.c  gstglgraphicmaker.h  gstglimagesink.c  gstglimagesink.h  gstglmosaic.c  gstgltestsrc.c  gstgltestsrc.h  gstglupload.c  gstglupload.h  gstglvideomaker.c  gstglvideomaker.h  gstglvideomixer.c  gstopengl.c
m4/: Makefile.am
pkgconfig/: Makefile.am  gstreamer-gl-uninstalled.pc.in  gstreamer-gl.pc.in  gstreamer-plugins-gl.pc.in
po/: LINGUAS  Makevars  POTFILES.in  en.po
tests/: Makefile.am  pipelines
tests/check/: .gitignore  Makefile.am
tests/check/generic/: states.c
tests/check/libs/: gstglcontext.c
tests/check/pipelines/: simple-launch-lines.c
tests/examples/: .gitignore  Makefile.am  README  readme.txt
tests/examples/clutter/: Makefile.am  cluttershare.cbp
tests/examples/cocoa/: Makefile.am  README
tests/examples/cocoa/videooverlay/: GNUmakefile.gnustep  Makefile.am  main.m
tests/examples/cocoa/videoxoverlay/: GNUmakefile.gnustep  Makefile.am  main.m
tests/examples/cube/: Makefile  cube.sln  cube.vcproj  main.cpp
tests/examples/cubeyuv/: Makefile  cubeyuv.sln  cubeyuv.vcproj  main.cpp
tests/examples/doublecube/: Makefile  Makefile.am  doublecube.sln  doublecube.vcproj  main.cpp
tests/examples/doublecube/data/: Thumbs.db  lost.avi
tests/examples/filterxoverlay/: Makefile  filterxoverlay.sln  filterxoverlay.vcproj  gtkoverlay.sln  main.cpp
tests/examples/generic/: Makefile.am  README  generic.sln
tests/examples/generic/cube/: Makefile.am  cube.sln  cube.vcproj  main.cpp
tests/examples/generic/cubeyuv/: Makefile.am  cubeyuv.vcproj  main.cpp
tests/examples/generic/doublecube/: Makefile.am  doublecube.vcproj  main.cpp
tests/examples/generic/recordgraphic/: Makefile  Makefile.am  main.cpp  recordgraphic.sln  recordgraphic.vcproj
tests/examples/gtk/: Makefile.am  README  gstgtk.h  gtk.sln
tests/examples/gtk/filternovideooverlay/: Makefile.am  main.cpp
tests/examples/gtk/filternoxoverlay/: Makefile.am  filternoxoverlay.vcproj  main.cpp
tests/examples/gtk/filtervideooverlay/: Makefile.am  main.cpp
tests/examples/gtk/filterxoverlay/: Makefile.am  filterxoverlay.vcproj  main.cpp
tests/examples/gtk/fxtest/: Makefile.am  fxtest.vcproj
tests/examples/gtk/gtkvideooverlay/: Makefile.am  main.cpp
tests/examples/gtk/gtkxoverlay/: Makefile.am  gtkoverlay.sln  gtkxoverlay.vcproj  main.cpp
tests/examples/gtk/pixbufdrop/: pixbufdrop.vcproj
tests/examples/gtk/switchvideooverlay/: Makefile.am  main.cpp
tests/examples/gtk/switchxoverlay/: Makefile.am  main.cpp  switchxoverlay.vcproj
tests/examples/gtkxoverlay/: Makefile  gtkxoverlay.vcproj  main.cpp
tests/examples/mousexoverlay/: gstthread.cpp  gstthread.h  main.cpp  mousexoverlay.pri  mousexoverlay.pro  mousexoverlay.sln  mousexoverlay.vcproj  pipeline.cpp  pipeline.h  qrenderer.cpp  qrenderer.h
tests/examples/qglwidgetxoverlay/: gstthread.cpp  gstthread.h  main.cpp  pipeline.cpp  pipeline.h  qglrenderer.cpp  qglrenderer.h  qglwidgetxoverlay.pri  qglwidgetxoverlay.pro  qglwidgetxoverlay.sln  qglwidgetxoverlay.vcproj
tests/examples/qt/: Makefile.am  README
tests/examples/recordgraphic/: Makefile  main.cpp  recordgraphic.sln  recordgraphic.vcproj
tests/examples/sdl/: sdlshare.vcproj
tests/examples/videoxoverlay/: gstthread.cpp  gstthread.h  main.cpp  pipeline.cpp  pipeline.h  qrenderer.cpp  qrenderer.h  videoxoverlay.pro  videoxoverlay.sln  videoxoverlay.vcproj
tests/examples/wx/: Makefile.am
unix/codeblocks/gstopengl/: gstopengl.cbp  gstopengl.depend
unixES/codeblocks/: gstopengl.cbp
win32/codeblock/: gstopengl.cbp
win32/codeblock/gstopengl/: gstopengl.cbp  gstopengl.depend
win32/common/: config.h  config.h.in
win32/vs8/: libgstgl.sln  libgstgl.vcproj  libgstopengl.sln  libgstopengl.vcproj
win32/vs9/: libgstopengl.sln  libgstopengl.vcproj
winCE/vs9/: libgstopengl.vcproj
(+62 files in other folders)
