cmake_minimum_required(VERSION "2.6.0")

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)

project (GST-PLUGINS-GL)

find_package(Glib2 REQUIRED)
find_package(GTK2 REQUIRED)
find_package(ATK REQUIRED)
find_package(Cairo REQUIRED)
find_package(LibXml2 REQUIRED)
find_package(LibIconv REQUIRED)
find_package(Gstreamer REQUIRED)
find_package(OpenGL REQUIRED)
find_package(Glew REQUIRED)

function(check_package name)
  if (${name}_FOUND)
    message(STATUS "Found ${name}... YES")
  else (${name}_FOUND)
    message(STATUS "Found ${name}... NO")
    if (WIN32)
      message(FATAL_ERROR "You should set the env variable ${name}_DIR")
    else (WIN32)
      message(FATAL_ERROR "You should install ${name} dev package")
    endif (WIN32)
  endif (${name}_FOUND)
endfunction(check_package)

check_package(GLIB2)
check_package(GTK2)
check_package(ATK)
check_package(CAIRO)
check_package(LIBXML2)
check_package(LIBICONV)
check_package(GSTREAMER)
check_package(OPENGL)
check_package(GLEW)

#message("****" ${GLIB2_INCLUDE_DIR})
#message("****" ${GLIB2_LIBRARIES})
#message("****" ${GTK2_INCLUDE_DIR})
#message("****" ${GTK2_LIBRARIES})
#message("****" ${ATK_INCLUDE_DIR})
#message("****" ${CAIRO_INCLUDE_DIR})
#message("****" ${LIBXML2_INCLUDE_DIR})
#message("****" ${LIBICONV_INCLUDE_DIR})
#message("****" ${GSTREAMER_INCLUDE_DIR})
#message("****" ${GSTREAMER_LIBRARIES})
#message("****" ${OPENGL_INCLUDE_DIR})
#message("****" ${OPENGL_LIBRARIES})
#message("****" ${GLEW_INCLUDE_DIR})
#message("****" ${GLEW_LIBRARY})

add_subdirectory (gst-libs)
add_subdirectory (gst)
add_subdirectory (tests)

add_dependencies(gstgl gstfreeglut)

add_definitions(-DHAVE_CONFIG_H)
